2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprogress.h: use G_TYPE macros for type checking instead
	of GTK_CHECK ones because it's the parent class of an undeprecated
	class and the GTK_CHECK stuff will soon be deprecated.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilesel.c
	* gtk/gtkinputdialog.c
	* gtk/gtkmenutoolbutton.c
	* gtk/gtkoptionmenu.c
	* gtk/gtktoolitem.c
	* gtk/gtktooltips.c: add or move around
	#undef GTK_DISABLE_DEPRECATED so it's possible to build without
	deprecated stuff again (with the minor glitch that it doesn't
	link ;) but at least it's a tool to keep the code clean).

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item): Fix dumb typo in the previous
	commit.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item),
	(gtk_recent_manager_move_item): Increase the consistency of the
	errors returned by GtkRecentManager. (Paolo Borelli)

2008-06-17  Paolo Borelli  <pborelli@katamail.com>

	* gtk/tests/recentmanager.c: add some unit tests for GtkRecentManager.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_remove_item): Consistently use the same
	error when removing a URI from an empty GtkRecentManager.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkfilechooserdefault.c: remove static integer variables
	which hold the number of members in GtkTargetEntry arrays and use
	G_N_ELEMENTS() directly instead.

2008-06-17  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.symbols: move some deprecated symbols into
	#ifndef GTK_DISABLE_DEPRECATED.

2008-06-17  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkfilechooserdefault.c:
	(gtk_file_chooser_default_init),
	(gtk_file_chooser_default_constructor),
	(gtk_file_chooser_default_screen_changed),
	(recent_start_loading): Remove the GtkRecentManager screen